ks-component-ts/src/styles/library.css
/* ... */
.pointer-events-none {
  pointer-events: none;
}

.visible {
  visibility: visible;
}

.invisible {
  visibility: hidden;
}

.collapse {
  visibility: collapse;
}

.static {
  position: static;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.\!relative {
  position: relative !important;
}

.sticky {
  position: sticky;
}

.top-0 {
  top: 0;
}

.left-0 {
  left: 0;
}

.-top-1 {
  top: -4px;
}

.right-2 {
  right: 8px;
}

.right-0 {
  right: 0;
}

.-right-2 {
  right: -8px;
}

.bottom-0 {
  bottom: 0;
}

.-right-px {
  right: -1px;
}

.-bottom-22 {
  bottom: -88px;
}

.bottom-6 {
  bottom: 24px;
}

.right-4 {
  right: 16px;
}

.bottom-4 {
  bottom: 16px;
}

.top-1\/2 {
  top: 50%;
}

.left-1\/2 {
  left: 50%;
}

.-bottom-10 {
  bottom: -40px;
}

.bottom-full {
  bottom: 100%;
}

.top-full {
  top: 100%;
}

.right-full {
  right: 100%;
}

.left-full {
  left: 100%;
}

.z-50 {
  z-index: 50;
}

.z-30 {
  z-index: 30;
}

.z-20 {
  z-index: 20;
}

.z-10 {
  z-index: 10;
}

.z-0 {
  z-index: 0;
}

.z-40 {
  z-index: 40;
}

.m-auto {
  margin: auto;
}

.m-0\.75 {
  margin: 3px;
}

.m-0 {
  margin: 0;
}

.m-26 {
  margin: 104px;
}

.-m-0\.5 {
  margin: -2px;
}

.-m-0 {
  margin: 0;
}

.my-50 {
  margin-top: 200px;
  margin-bottom: 200px;
}

.my-auto {
  margin-top: auto;
  margin-bottom: auto;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mx-2 {
  margin-left: 8px;
  margin-right: 8px;
}

.my-10 {
  margin-top: 40px;
  margin-bottom: 40px;
}

.mx-3 {
  margin-left: 12px;
  margin-right: 12px;
}

.mx-10 {
  margin-left: 40px;
  margin-right: 40px;
}

.-mx-3 {
  margin-left: -12px;
  margin-right: -12px;
}

.-mx-2 {
  margin-left: -8px;
  margin-right: -8px;
}

.my-1 {
  margin-top: 4px;
  margin-bottom: 4px;
}

.my-5 {
  margin-top: 20px;
  margin-bottom: 20px;
}

.mx-4 {
  margin-left: 16px;
  margin-right: 16px;
}

.mt-6 {
  margin-top: 24px;
}

.mb-6 {
  margin-bottom: 24px;
}

.mt-2 {
  margin-top: 8px;
}

.mb-2 {
  margin-bottom: 8px;
}

.mb-1 {
  margin-bottom: 4px;
}

.mb-4 {
  margin-bottom: 16px;
}

.mb-0 {
  margin-bottom: 0;
}

.mt-1 {
  margin-top: 4px;
}

.mb-10 {
  margin-bottom: 40px;
}

.mb-3 {
  margin-bottom: 12px;
}

.-ml-4 {
  margin-left: -16px;
}

.-mt-3 {
  margin-top: -12px;
}

.mr-4 {
  margin-right: 16px;
}

.mb-auto {
  margin-bottom: auto;
}

.-mt-1 {
  margin-top: -4px;
}

.mr-2 {
  margin-right: 8px;
}

.ml-4 {
  margin-left: 16px;
}

.mt-7 {
  margin-top: 28px;
}

.mt-px {
  margin-top: 1px;
}

.mt-3\.5 {
  margin-top: 14px;
}

.mt-3 {
  margin-top: 12px;
}

.mr-3 {
  margin-right: 12px;
}

.ml-auto {
  margin-left: auto;
}

.-ml-3 {
  margin-left: -12px;
}

.ml-2 {
  margin-left: 8px;
}

.mr-8 {
  margin-right: 32px;
}

.ml-5 {
  margin-left: 20px;
}

.mr-1 {
  margin-right: 4px;
}

.mt-4 {
  margin-top: 16px;
}

.-mt-5 {
  margin-top: -20px;
}

.ml-3 {
  margin-left: 12px;
}

.-ml-px {
  margin-left: -1px;
}

.-mt-8 {
  margin-top: -32px;
}

.mr-7 {
  margin-right: 28px;
}

.mr-6 {
  margin-right: 24px;
}

.mt-20 {
  margin-top: 80px;
}

.mt-10 {
  margin-top: 40px;
}

.mb-2\.5 {
  margin-bottom: 10px;
}

.mt-2\.5 {
  margin-top: 10px;
}

.mb-16 {
  margin-bottom: 64px;
}

.ml-12 {
  margin-left: 48px;
}

.ml-2\.5 {
  margin-left: 10px;
}

.mt-12 {
  margin-top: 48px;
}

.-ml-8 {
  margin-left: -32px;
}

.ml-8 {
  margin-left: 32px;
}

.ml-1 {
  margin-left: 4px;
}

.mt-0\.5 {
  margin-top: 2px;
}

.mt-0 {
  margin-top: 0;
}

.mr-0\.5 {
  margin-right: 2px;
}

.mr-0 {
  margin-right: 0;
}

.mt-1\.5 {
  margin-top: 6px;
}

.mb-1\.5 {
  margin-bottom: 6px;
}

.mt-8 {
  margin-top: 32px;
}

.mr-auto {
  margin-right: auto;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-screen {
  height: 100vh;
}

@supports (-webkit-touch-callout: none) {

  .h-screen {
    height: -webkit-fill-available;
  }
}

.h-9 {
  height: 36px;
}

.h-1 {
  height: 4px;
}

.h-5 {
  height: 20px;
}

.h-full {
  height: 100%;
}

.h-table {
  height: 696px;
}

.h-2 {
  height: 8px;
}

.h-6 {
  height: 24px;
}

.h-4\.5 {
  height: 18px;
}

.h-4 {
  height: 16px;
}

.h-3\.5 {
  height: 14px;
}

.h-3 {
  height: 12px;
}

.h-14 {
  height: 56px;
}

.h-16 {
  height: 64px;
}

.h-12 {
  height: 48px;
}

.h-5\/6 {
  height: 83.333333%;
}

.h-8 {
  height: 32px;
}

.h-10 {
  height: 40px;
}

.h-80 {
  height: 320px;
}

.h-52 {
  height: 208px;
}

.h-0\.75 {
  height: 3px;
}

.h-0 {
  height: 0;
}

.h-60 {
  height: 240px;
}

.h-px {
  height: 1px;
}

.h-7\.75 {
  height: 31px;
}

.h-7 {
  height: 28px;
}

.h-5\.25 {
  height: 21px;
}

.h-2\/6 {
  height: 33.333333%;
}

.h-2\/3 {
  height: 66.666667%;
}

.h-1\.5 {
  height: 6px;
}

.max-h-32 {
  max-height: 128px;
}

.max-h-16 {
  max-height: 64px;
}

.max-h-38 {
  max-height: 152px;
}

.max-h-64 {
  max-height: 256px;
}

.min-h-20 {
  min-height: 80px;
}

.min-h-28 {
  min-height: 112px;
}

.min-h-full {
  min-height: 100%;
}

.w-screen {
  width: 100vw;
}

.w-full {
  width: 100%;
}

.w-2\/6 {
  width: 33.333333%;
}

.w-16 {
  width: 64px;
}

.w-5 {
  width: 20px;
}

.w-2 {
  width: 8px;
}

.w-6 {
  width: 24px;
}

.w-11 {
  width: 44px;
}

.w-4\.5 {
  width: 18px;
}

.w-4 {
  width: 16px;
}

.w-9 {
  width: 36px;
}

.w-3\.5 {
  width: 14px;
}

.w-3 {
  width: 12px;
}

.w-auto {
  width: auto;
}

.w-1\/6 {
  width: 16.666667%;
}

.w-48 {
  width: 192px;
}

.w-px {
  width: 1px;
}

.w-0\.5 {
  width: 2px;
}

.w-0 {
  width: 0;
}

.w-10 {
  width: 40px;
}

.w-32 {
  width: 128px;
}

.w-1\/2 {
  width: 50%;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-8 {
  width: 32px;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-1 {
  width: 4px;
}

.w-0\.75 {
  width: 3px;
}

.w-64 {
  width: 256px;
}

.w-12 {
  width: 48px;
}

.w-120 {
  width: 480px;
}
/* ... */

